fix: main overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     }
 
     main {
-        @apply min-h-[calc(100vh-18rem)] scroll-smooth bg-lightGray;
+        @apply min-h-[calc(100vh-27rem)] pt-16 pb-5 scroll-smooth bg-lightGray md:min-h-[calc(100vh-13rem)];
     }
 
     footer {
